--- a/.github/workflows/pytest-gpu.yml
+++ b/.github/workflows/pytest-gpu.yml
@@ -66,6 +66,13 @@ jobs:
             pytest --cov --cov-config=.coveragerc --cov-report=xml examples/seismic/viscoelastic/viscoelastic_example.py
         fi
 
+    - name: Run with MPI
+      if: matrix.name == 'pytest-gpu-acc'
+      run: |
+        DEVITO_MPI=1 mpirun -n 2 py.test examples/seismic/elastic/elastic_example.py
+        DEVITO_MPI=1 mpirun -n 2 py.test examples/seismic/viscoacoustic/viscoacoustic_example.py
+        DEVITO_MPI=1 mpirun -n 2 py.test examples/seismic/viscoelastic/viscoelastic_example.py
+
     - name: Upload coverage to Codecov
       uses: codecov/codecov-action@v1.0.6
       with:
